--- a/src/components/HeaderComponents.astro
+++ b/src/components/HeaderComponents.astro
@@ -7,7 +7,7 @@
         <ul class="nav">
             <li><a href="/menu">MENU</a></li>
             <li><a href="/biography">BIOGRAPHY</a></li>
-            <li><a href="/works">WORKS</a></li>
+            <li><a href="/portfolio">WORKS</a></li>
             <li><a href="/contact">CONTACT</a></li>
         </ul>
   
@@ -22,7 +22,7 @@
       <ul>
         <li><a href="/menu">MENU</a></li>
         <li><a href="/biography">BIOGRAPHY</a></li>
-        <li><a href="/works">WORKS</a></li>
+        <li><a href="/portfolio">WORKS</a></li>
         <li><a href="/contact">CONTACT</a></li>
       </ul>
     </nav>
@@ -100,8 +100,7 @@
   main {
     padding-top: 100px;
   }
-  
-  /* ハンバーガーボタンのスタイル */
+
   #hamburger {
     display: none;
     background: none;
@@ -158,7 +157,6 @@
       }
   }
   
-  /* アクティブ時のスタイル */
   #hamburger.active span:nth-child(1) {
     transform: translateY(7px) rotate(45deg);
   }
