--- a/src/pages/jp/menu.astro
+++ b/src/pages/jp/menu.astro
@@ -1,34 +1,39 @@
 ---
 import "../styles/global.css";
-import Header from "../components/HeaderComponents.astro";
-import Footer from "../components/FooterComponents.astro";
-import SocialIcons2 from "../components/SocialIcons2.astro";
+import Header from "../../components/HeaderComponents.astro";
+import Footer from "../../components/FooterComponents.astro";
+import SocialIcons2 from "../../components/SocialIcons2.astro";
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
 import { faTwitter } from "@fortawesome/free-brands-svg-icons";
-import "../styles/global.css";
+import { useTranslation } from 'astro-i18next';
+const { t } = useTranslation(['menu']);
 ---
+
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MENU</title>
+    <title>{t('title')}</title>
     <link rel="stylesheet" href="../styles/global.css">
 </head>
+
 <body>
     <Header></Header>
     <main>
         <section id="title">
-            <h1 class="page-title">MENU</h1>
+            <h1 class="page-title">{t('title')}</h1>
         </section>
+
         <section id="works">
+            <!-- 今後、メニュー内容が増えた時はここに追加 -->
         </section>
     </main>
+
     <SocialIcons2 />
     <Footer></Footer>
     <FontAwesomeIcon icon={faTwitter} size="2x" className="twitter-icon" client:load />
 </body>
 </html>
-
 
 <style>
 body {
@@ -37,26 +42,20 @@ body {
     color: black;
     text-align: center;
 }
-
-/* Title */
 .page-title {
     text-align: center;
     font-size: 50px;
     padding: 60px 0;
     margin-top: 50px;
 }
-
 #works {
     display: flex;
-    /* justify-content: center; */
     align-items: center;
 }
-
 #works h2 {
     font-size: 50px;
     margin-bottom: 20px; 
 }
-
 html, body {
     height: 100%;
     margin: 0;
@@ -64,11 +63,9 @@ html, body {
     display: flex;
     flex-direction: column;
 }
-
 main {
     flex: 1;
 }
-
 footer {
     background-color: black;
     text-align: center;
@@ -78,8 +75,6 @@ footer {
     padding: 20px;
     width: 100%;
 }
-
-/* Twitter Icon */
 .twitter-icon {
     color: white;
     display: none;
