--- a/src/pages/ja/index.astro
+++ b/src/pages/ja/index.astro
@@ -8,7 +8,7 @@ import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
 import { faTwitter } from "@fortawesome/free-brands-svg-icons";
 import SocialIcons from "../../components/SocialIcons.astro";
 import "../styles/global.css";
-import { useTranslation } from 'astro-i18next';
+import useTranslation from 'astro-i18next';
 const { t } = useTranslation();
 ---
 <!doctype html>
