--- a/src/pages/ja/portfolio.astro
+++ b/src/pages/ja/portfolio.astro
@@ -5,8 +5,8 @@ import Footer from "../../components/FooterComponents.astro";
 import SocialIcons2 from "../../components/SocialIcons2.astro";
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
 import { faTwitter } from "@fortawesome/free-brands-svg-icons";
-import { useTranslation } from 'astro-i18next';
-const { t } = useTranslation(['portfolio']);
+import useTranslation from 'astro-i18next';
+const { t } = useTranslation();
 ---
 
 <html lang="ja">
