--- a/src/pages/ja/topicks.astro
+++ b/src/pages/ja/topicks.astro
@@ -1,12 +1,12 @@
 ---
-import "../styles/global.css";
+import "../../styles/global.css";
 import Header from "../../components/HeaderComponents.astro";
 import Footer from "../../components/FooterComponents.astro";
 import SocialIcons2 from "../../components/SocialIcons2.astro";
 import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
 import { faTwitter } from "@fortawesome/free-brands-svg-icons";
-import { useTranslation } from 'astro-i18next';
-const { t } = useTranslation(['topicks2']);
+import useTranslation from 'astro-i18next';
+const { t } = await useTranslation(Astro);
 ---
 
 <!doctype html>
@@ -27,24 +27,27 @@ const { t } = useTranslation(['topicks2']);
       <div class="container">
         <div class="news-title">{t('news_title')}<em>NEW</em></div>
         <div class="news-date">{t('news_date')}</div>
-        <img class="feature-image" src="/images/important.png" alt="Feature Image" />
+        <img class="feature-image" src="/images/ANOTHER-SKY-in-NZ.jpg" alt="Feature Image" />
         <div class="news-content">
           <p>{t('description')}</p>
           <br />
           <p>
-            {t('instagram_text')}<br />
-            <a href="https://www.instagram.com/pacific_kai.12" class="animated-button">{t('instagram_button')}</a>
+            {t('watch_video')}<br />
+            <a href="https://youtu.be/1HTSFoZo4Ws?si=pXuJ_gLS9aKFvcck" class="animated-button">{t('watch_button')}</a>
+          </p>
+
+          <p class="link-section">
+            {t('youtube_channel')}<br />
+            <a href="https://www.youtube.com/@PacificKai_World" class="animated-button">{t('channel_button')}</a>
           </p>
         </div>
       </div>
     </main>
-
     <SocialIcons2 />
     <Footer />
     <FontAwesomeIcon icon={faTwitter} size="2x" className="twitter-icon" client:load />
   </body>
 </html>
-
 <style>
 
 body {
